--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
   "scripts": {
     "start": "npm run dev",
     "dev": "cross-env NODE_ENV=development vite",
+    "open:android": "npx cap open android",
+    "open:ios": "npx cap open ios",
+    "run:android": "npm run build && npx cap run android",
+    "run:ios": "npm run build && npx cap run ios",
+    "sync": "npm run build && npx cap sync",
     "build": "cross-env NODE_ENV=production vite build",
     "postinstall": "cpy --flat ./node_modules/framework7-icons/fonts/*.* ./src/fonts/ && cpy --flat ./node_modules/material-icons/iconfont/*.* ./src/fonts/"
   },
@@ -18,6 +23,10 @@
     "last 5 Firefox versions"
   ],
   "dependencies": {
+    "@capacitor/android": "^6.1.2",
+    "@capacitor/cli": "^6.1.2",
+    "@capacitor/ios": "^6.1.2",
+    "@ionic/cli": "^7.2.0",
     "dom7": "^4.0.6",
     "framework7": "^8.3.4",
     "framework7-icons": "^5.0.5",
