Fixed errors partially

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,7 +1,5 @@
 {
   "appId": "com.app.carcalendar",
   "appName": "DriveLife",
-  "webDir": "www",
-  "bundledWebRuntime": false,
-  "loggingBehavior": "debug"
+  "webDir": "www"
 }
