--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "cross-env NODE_ENV=development vite",
     "open:android": "npx cap open android",
     "open:ios": "npx cap open ios",
-    "run:android": "npm run build && npx cap run android",
+    "run:android": "npm run build && npx cap sync && npx cap run android",
     "run:ios": "npm run build && npx cap run ios",
     "sync": "npm run build && npx cap sync",
     "build": "cross-env NODE_ENV=production vite build",
@@ -26,7 +26,6 @@
     "@capacitor/android": "^6.1.2",
     "@capacitor/cli": "^6.1.2",
     "@capacitor/ios": "^6.1.2",
-    "@ionic/cli": "^7.2.0",
     "dom7": "^4.0.6",
     "framework7": "^8.3.4",
     "framework7-icons": "^5.0.5",
