--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@capacitor/app": "^6.0.1",
     "@capacitor/cli": "^6.1.2",
     "@capacitor/device": "^6.0.1",
+    "@capacitor/geolocation": "^6.0.1",
     "@capacitor/ios": "^6.1.2",
     "dom7": "^4.0.6",
     "framework7": "^8.3.4",
