--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "run:android": "npm run build && npx cap sync && npx cap run android",
     "run:ios": "npm run build && npx cap run ios",
     "sync": "npm run build && npx cap sync",
+    "assets": "npx capacitor-assets generate",
     "build": "cross-env NODE_ENV=production vite build",
     "postinstall": "cpy --flat ./node_modules/framework7-icons/fonts/*.* ./src/fonts/ && cpy --flat ./node_modules/material-icons/iconfont/*.* ./src/fonts/"
   },
