--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "@capacitor/device": "^6.0.1",
     "@capacitor/geolocation": "^6.0.1",
     "@capacitor/ios": "^6.1.2",
+    "capacitor-native-settings": "^6.0.1",
     "dom7": "^4.0.6",
     "framework7": "^8.3.4",
     "framework7-icons": "^5.0.5",
+    "html5-qrcode": "^2.2.7",
     "material-icons": "^1.13.12",
     "skeleton-elements": "^4.0.1",
     "swiper": "^11.1.14"
