Added push notifications

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,14 @@
 {
   "appId": "com.app.carcalendar",
   "appName": "DriveLife",
-  "webDir": "www"
+  "webDir": "www",
+  "plugins": {
+    "PushNotifications": {
+      "presentationOptions": [
+        "badge",
+        "sound",
+        "alert"
+      ]
+    }
+  }
 }
