--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "@capacitor/android": "^6.1.2",
     "@capacitor/app": "^6.0.1",
     "@capacitor/cli": "^6.1.2",
+    "@capacitor/clipboard": "^6.0.2",
     "@capacitor/device": "^6.0.1",
     "@capacitor/geolocation": "^6.0.1",
     "@capacitor/ios": "^6.1.2",
+    "@capacitor/push-notifications": "^6.0.3",
     "capacitor-native-settings": "^6.0.1",
     "dom7": "^4.0.6",
+    "firebase": "^11.0.2",
     "framework7": "^8.3.4",
     "framework7-icons": "^5.0.5",
     "html5-qrcode": "^2.2.7",
