--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "framework7": "^8.3.4",
     "framework7-icons": "^5.0.5",
     "html5-qrcode": "^2.2.7",
+    "jose": "^5.9.6",
     "material-icons": "^1.13.12",
     "skeleton-elements": "^4.0.1",
     "swiper": "^11.1.14"
