--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@capacitor/geolocation": "^6.0.1",
     "@capacitor/ios": "^6.1.2",
     "@capacitor/push-notifications": "^6.0.3",
+    "@capacitor/storage": "^1.2.5",
     "capacitor-native-settings": "^6.0.1",
     "dom7": "^4.0.6",
     "firebase": "^11.0.2",
