--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
   "dependencies": {
     "@capacitor/android": "^6.1.2",
     "@capacitor/app": "^6.0.1",
+    "@capacitor/camera": "^6.1.1",
     "@capacitor/cli": "^6.1.2",
     "@capacitor/clipboard": "^6.0.2",
+    "@capacitor/core": "^6.2.0",
     "@capacitor/device": "^6.0.1",
+    "@capacitor/filesystem": "^6.0.2",
     "@capacitor/geolocation": "^6.0.1",
     "@capacitor/ios": "^6.1.2",
     "@capacitor/push-notifications": "^6.0.3",
