Added create post

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@capacitor/filesystem": "^6.0.2",
     "@capacitor/geolocation": "^6.0.1",
     "@capacitor/ios": "^6.1.2",
+    "@capacitor/local-notifications": "^6.1.1",
     "@capacitor/push-notifications": "^6.0.3",
     "@capacitor/storage": "^1.2.5",
     "capacitor-native-settings": "^6.0.1",
