--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -9,6 +9,17 @@
         "sound",
         "alert"
       ]
+    },
+    "SplashScreen": {
+      "launchAutoHide": true,
+      "backgroundColor": "#ffffffff",
+      "androidSplashResourceName": "splash",
+      "androidScaleType": "CENTER_CROP",
+      "showSpinner": false,
+      "splashFullScreen": true,
+      "splashImmersive": true,
+      "layoutName": "launch_screen",
+      "useDialog": true
     }
   }
 }
