--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@capacitor/device": "^6.0.1",
     "@capacitor/filesystem": "^6.0.2",
     "@capacitor/geolocation": "^6.0.1",
+    "@capacitor/haptics": "^6.0.2",
     "@capacitor/ios": "^6.1.2",
     "@capacitor/local-notifications": "^6.1.1",
     "@capacitor/push-notifications": "^6.0.3",
