--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@capacitor/haptics": "^6.0.2",
     "@capacitor/ios": "^6.1.2",
     "@capacitor/local-notifications": "^6.1.1",
+    "@capacitor/network": "^6.0.3",
     "@capacitor/push-notifications": "^6.0.3",
     "@capacitor/splash-screen": "^6.0.3",
     "@capacitor/storage": "^1.2.5",
