--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@capacitor/push-notifications": "^6.0.3",
     "@capacitor/splash-screen": "^6.0.3",
     "@capacitor/storage": "^1.2.5",
+    "@stripe/stripe-js": "^5.3.0",
     "capacitor-native-settings": "^6.0.1",
     "dom7": "^4.0.6",
     "firebase": "^11.0.2",
